# src/api/file/index.php
@@ -7,8 +7,9 @@ require_once __DIR__ . '/../apiHead.php';
  *      d (optional, default false) - should a download be forced or should it be displayed in the browser? (if set it will download)
  *      r (optional, default false) - should the url be returned by the script as plain text or a redirect triggered? (if set it will redirect)
  *      e (optional, default 1 minute) - when should the link expire? Must be a string describing how long in words basically. If this file type has security features then it will default to 1 minute.
+ *      s (optional) - image size hint for Cloudflare Image Transformation. Supported values: tiny, small, medium, large.
  */
-$file = $bCMS->s3URL($_POST['f'], (isset($_POST['d'])),(isset($_POST['e']) ? $_POST['e'] : null),(isset($_POST['key']) ? $_POST['key'] : null));
+$file = $bCMS->s3URL($_POST['f'], (isset($_POST['d'])),(isset($_POST['e']) ? $_POST['e'] : null),(isset($_POST['key']) ? $_POST['key'] : null),(isset($_POST['s']) ? $bCMS->sanitizeString($_POST['s']) : null));
 if (!$file) finish(false,["message"=>"File not found - please check to ensure you are still logged in"]);
 else {
     if (isset($_POST['r'])) {
@@ -89,6 +90,15 @@ else {
  *         required="false", 
  *         @OA\Schema(
  *             type="boolean"), 
+ *         ), 
+ *     @OA\Parameter(
+ *         name="s",
+ *         in="query",
+ *         description="Image size hint for Cloudflare Image Transformation. Only applied when Cloudflare Image Transformation is configured and the file is an image.",
+ *         required=false, 
+ *         @OA\Schema(
+ *             type="string",
+ *             enum={"tiny", "small", "medium", "large"}), 
  *         ), 
  * )
  */
